objects/SVMXC__Parts_Request__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_Date_Shipped__c</fullName>
        <description>Denotes the date shipped</description>
        <inlineHelpText>Denotes the date shipped</inlineHelpText>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tracking_Number__c</fullName>
        <description>Denotes the tracking number of parts request</description>
        <inlineHelpText>Denotes the tracking number of parts request</inlineHelpText>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Shipping_Courier__c</fullName>
        <description>Indicates the shipping courier to be used for the shipment</description>
        <label>Shipping Courier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fed Ex</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>USPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Shipping_Method__c</fullName>
        <description>Indicates method of shipment request: Ground, 2nd Day, Next Day</description>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ground</fullName>
                </value>
                <value>
                    <fullName>2nd Day</fullName>
                </value>
                <value>
                    <fullName>Next Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Parts Requests</relationshipLabel>
        <relationshipName>Parts_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>